# chess

./: .gitignore  Bishop.cpp  Bishop.hpp  Board.cpp  Board.hpp  CMakeLists.txt  CPPLINT.cfg  Game.cpp  Game.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Makefile  Pawn.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Queen.hpp  README.md  Rook.cpp  Rook.hpp  board.txt  build.sh  main.cpp  test.cpp
lib/: Board.cpp  Board.hpp
lib/pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
pieces/: Bishop.hpp  Pawn.cpp
src/: Game.cpp  Game.hpp  main.cpp
tests/: test.cpp
